Interactable Bug Fix
Fixed the interactable bug where it refused to assign bullets and batteries to the interactables.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "JATC Horror Game.sln"
+    "dotnet.defaultSolution": "JATC-Horror-Game.sln"
 }
